--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.7.15",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
+    "antd": "^5.20.1",
     "gsap": "^3.12.5",
+    "history": "5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "6",
     "three": "^0.167.1",
     "typescript": "^5.5.4"
   },
