--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.7.15",
+    "@react-spring/three": "~9.6.1",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
     "@types/node": "^22.4.1",
     "antd": "^5.20.1",
     "gsap": "^3.12.5",
     "history": "5",
+    "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
