--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-spring/three": "~9.6.1",
     "@react-three/drei": "^9.109.5",
     "@react-three/fiber": "^8.17.5",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/node": "^22.4.1",
     "antd": "^5.20.1",
     "gsap": "^3.12.5",
